src/test/resources/arp/invalid/arp_rdw_exp.sil
field f: Int

method foo(x: Ref)
requires acc(x.f, 3*rdw)
ensures acc(x.f, 3*rdw)
{
}